<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Component.CharityActivity">

    <android.support.v7.widget.RecyclerView
        android:id="@+id/charity_list"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        />


    <TextView
        android:visibility="gone"
        android:id="@+id/simpletext"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:text="this is text" />
</android.support.constraint.ConstraintLayout>